# suvorov-bot

./: .dir-locals.el  .editorconfig  .gitignore  .gitmodules  .projectile  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  crossplatform-ci.yml  ladder.yml  linter.yaml
.travis/: before-install.sh  build.sh  configure.sh  install.sh  lint.sh
hacks/: disable_WX.patch
src/: API.cpp  API.h  Bot.h  Builder.cpp  Builder.h  CMakeLists.txt  ChatterBox.cpp  ChatterBox.h  Converter.cpp  Converter.h  Diagnosis.cpp  Diagnosis.h  Dispatcher.cpp  Dispatcher.h  ForceCommander.cpp  ForceCommander.h  Helpers.cpp  Helpers.h  Historican.cpp  Historican.h  Hub.cpp  Hub.h  Miner.cpp  Miner.h  Order.h  Overseer.cpp  Overseer.h  Pathfinder.cpp  Pathfinder.h  Timer.cpp  Version.h.in  World.cpp  World.h  main.cpp
src/blueprints/: Addon.cpp  Addon.h  Blueprint.cpp  Blueprint.h  Building.cpp  Building.h  BuildingUpgrade.cpp  BuildingUpgrade.h  Creature.cpp  Creature.h  Fortress.cpp  Fortress.h  GateUnit.cpp  GateUnit.h  HighTechUnit.cpp  HighTechUnit.h  Hive.cpp  Hive.h  Lair.cpp  Lair.h  Mutation.cpp  Mutation.h  Orbital.cpp  Orbital.h  Queen.cpp  Queen.h  Refinery.cpp  Refinery.h  Research.cpp  Research.h  TownHall.cpp  TownHall.h  Unit.cpp  Unit.h  Upgrade.cpp  Upgrade.h  ZergUnit.cpp  ZergUnit.h
src/core/: API.cpp  API.h  Converter.cpp  Converter.h  Errors.h  Helpers.cpp  Helpers.h  Map.cpp  Map.h  Order.h  Timer.cpp  Timer.h  Units.cpp  Units.h
src/objects/: GameObject.cpp  GameObject.h  Geyser.cpp  Geyser.h  Worker.cpp  Worker.h
src/plugins/: ChatterBox.cpp  ChatterBox.h  Diagnosis.cpp  Diagnosis.h  ExtraDrone.cpp  ExtraDrone.h  ForceCommander.cpp  ForceCommander.h  Governor.cpp  Governor.h  Miner.cpp  Miner.h  Plugin.cpp  Plugin.h  QuarterMaster.cpp  QuarterMaster.h  RepairMan.cpp  RepairMan.h  WarpSmith.cpp  WarpSmith.h
src/strategies/: Strategy.cpp  Strategy.h
src/strategies/protoss/: ChargelotPush.cpp  ChargelotPush.h  FourWGP.cpp  FourWGP.h
src/strategies/terran/: MarinePush.cpp  MarinePush.h
src/strategies/zerg/: ZerglingFlood.cpp  ZerglingFlood.h
